<resources>
    <string name="app_name">googletv</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="welcome_message">The Grand America Hotel</string>
    <string name="hotelservices">Hotel Services</string>
    <string name="newssports">News &amp; Sports</string>
    <string name="mediradio">Media &amp; Radio</string>
    <string name="onlinesocial">Online &amp; Social</string>
    <string name="appsworld">Apps World</string>
    <string name="games">Games</string>
</resources>